.iac/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cezzis-com-cocktails-aisearch
  namespace: cezzis
  labels:
    app: cezzis-com-cocktails-aisearch
    app.kubernetes.io/part-of: cezzis
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app: cezzis-com-cocktails-aisearch
  ports:
    - name: http
      port: 8010
      targetPort: 8010
      protocol: TCP
